--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "airbnb": "^0.0.2",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2",
     "webpack-dev-server": "^3.8.2"
   }
