--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
