--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "ts-loader": "^6.2.0",
+    "typescript": "^3.6.4"
   },
   "version": "0.1.0",
   "devDependencies": {
