--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "@types/graphql": "^14.5.0",
+    "@types/styled-components": "^4.1.19",
+    "apollo": "^2.20.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
@@ -17,16 +20,28 @@
     "babel-preset-env": "^1.7.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
+    "styled-components": "^4.4.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.4"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@graphql-codegen/fragment-matcher": "1.8.1",
+    "@graphql-codegen/introspection": "1.8.1",
+    "@graphql-codegen/typescript": "1.8.1",
+    "@graphql-codegen/typescript-document-nodes": "1.8.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.8.1",
+    "@graphql-codegen/typescript-operations": "1.8.1",
+    "@graphql-codegen/typescript-react-apollo": "1.8.1",
+    "@types/lodash": "^4.14.144",
+    "@types/react": "^16.9.9",
     "airbnb": "^0.0.2",
+    "concurrently": "^5.0.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
@@ -36,5 +51,12 @@
     "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2",
     "webpack-dev-server": "^3.8.2"
+  },
+  "scripts": {
+    "types": "yarn types:backend && yarn types:frontend",
+    "types:backend": "bundle exec rake graphql:schema:idl",
+    "types:frontend": "npx concurrently --kill-others-on-fail  \"yarn types:frontend:types\"",
+    "types:frontend:types": "rm -rf app/javascript/schema && apollo client:codegen app/javascript/schema -c=apollo.config.js --target=typescript --outputFlat",
+    "types:frontend:fragments": "npx graphql-codegen --config codegen.yml"
   }
 }
