--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,23 @@
 {
   "compilerOptions": {
-    "declaration":false,
-    "emitDecoratorMetadata":true,
-    "experimentalDecorators":true,
-    "lib": [
-      "es6",
-      "dom"
-    ],
-    "module":"es6",
-    "moduleResolution":"node",
-    "sourceMap":true,
-    "target":"es5",
-    "jsx":"react",
-    "allowSyntheticDefaultImports":true,
-    "noImplicitAny":true,
-    "noImplicitThis":true,
-    "noImplicitReturns":true,
-    "strictNullChecks":true
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "lib": ["es6", "dom"],
+    "module": "es6",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "target": "es5",
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "paths": {
+      "@csnow/*": ["app/javascript/*"]
+    }
   },
-  "exclude": [
-    "**/*.spec.ts",
-    "node_modules",
-    "public"
-  ],
-  "compileOnSave":false
+  "exclude": ["**/*.spec.ts", "node_modules", "public"],
+  "compileOnSave": false
 }
