--- a/package.json
+++ b/package.json
@@ -40,19 +40,24 @@
     "@graphql-codegen/typescript-react-apollo": "1.8.1",
     "@types/lodash": "^4.14.144",
     "@types/react": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
     "airbnb": "^0.0.2",
     "concurrently": "^5.0.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "prettier": "^1.18.2",
     "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
+    "lint": "npx eslint --cache --ext .js,.ts,.tsx app/javascript",
     "types": "yarn types:backend && yarn types:frontend",
     "types:backend": "bundle exec rake graphql:schema:idl",
     "types:frontend": "npx concurrently --kill-others-on-fail  \"yarn types:frontend:types\"",
