--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,21 @@
 {
   "compilerOptions": {
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
-    "module": "es6",
-    "moduleResolution": "node",
+    "target": "es6",
     "sourceMap": true,
-    "target": "es5",
-    "jsx": "react",
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "strictNullChecks": true,
+    "allowJs": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "jsx": "react",
+    "module": "esnext",
+    "lib": ["es2017", "esnext", "dom"],
+    "baseUrl": ".",
     "paths": {
       "@csnow/*": ["app/javascript/*"]
     }
   },
-  "exclude": ["**/*.spec.ts", "node_modules", "public"],
-  "compileOnSave": false
+  "exclude": ["**/*.spec.ts", "node_modules", "public"]
 }
