--- a/.eslintrc
+++ b/.eslintrc
@@ -2,15 +2,16 @@
   "parser": "@typescript-eslint/parser",
   "extends": [
     "airbnb",
-    "prettier",
-    "prettier/react"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings"
   ],
   "plugins": [
     "prettier",
     "react",
     "@typescript-eslint",
-    "react-hooks",
-    "import"
+    "react-hooks"
   ],
   "parserOptions": {
     "project": "./tsconfig.json",
@@ -20,19 +21,33 @@
     }
   },
   "env": {
+    "browser": true,
     "es6": true,
     "commonjs": true,
     "node": true
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
+    "react/prop-types": 0,
+    "react/jsx-fragments": "off",
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/interface-name-prefix": ["warn", "always"],
+    "@typescript-eslint/explicit-function-return-type": [
+      1,
+      {
+        "allowTypedFunctionExpressions": true,
+        "allowExpressions": true,
+      },
+    ],
   },
   "settings": {
     "import/resolver": {
       "alias": {
         "map": [
           ["@csnow", "./app/javascript"]
-        ]
+        ],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
   }
