--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rails/webpacker": "^4.0.7",
     "@types/graphql": "^14.5.0",
     "@types/styled-components": "^4.1.19",
+    "antd": "^3.24.2",
     "apollo": "^2.20.0",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
