--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "@types/graphql": "^14.5.0",
+    "@types/react-dom": "^16.9.2",
     "@types/styled-components": "^4.1.19",
     "antd": "^3.24.2",
     "apollo": "^2.20.0",
@@ -32,7 +33,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
     "styled-components": "^4.4.0",
-    "ts-loader": "^6.2.0",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.6.4"
   },
   "version": "0.1.0",
