--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "sourceMap": true,
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "lib": ["es6", "dom"],
+    "module": "es6",
     "moduleResolution": "node",
-    "noImplicitAny": true,
-    "allowJs": true,
-    "noEmit": true,
-    "skipLibCheck": true,
+    "sourceMap": true,
+    "target": "es5",
     "jsx": "react",
-    "module": "esnext",
-    "lib": ["es2017", "esnext", "dom"],
     "baseUrl": ".",
     "paths": {
       "@csnow/*": ["app/javascript/*"]
     }
   },
-  "exclude": ["**/*.spec.ts", "node_modules", "public"]
+  "exclude": ["**/*.spec.ts", "node_modules", "vendor", "public"],
+  "compileOnSave": false
 }
