--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "styled-components": "^4.4.0",
     "ts-loader": "^6.2.1",
