--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
     "react/prop-types": 0,
     "react/jsx-fragments": "off",
