--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.6.4"
