--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.3.1",
+    "country-list": "^2.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "hltv": "^2.16.3",
@@ -34,6 +35,7 @@
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-country-flags": "^2.2.3",
     "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
