--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql-tag": "^2.10.1",
     "hltv": "^2.16.3",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
